[package]
name = "cat_telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
teloxide = { version = "0.12.2", features = ["teloxide-macros", "macros"] }
tokio = { version = "1.32.0", features = ["full"] }
