[package]
name = "cat_telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.8.5"
simple-logging = "2.0.2"
teloxide = { version = "0.12.2", features = ["teloxide-macros", "macros"] }
tokio = { version = "1.32.0", features = ["full"] }
uuid = "1.5.0"
